--- a/src/Components/PromoVideo/PromoVideo.css
+++ b/src/Components/PromoVideo/PromoVideo.css
@@ -5,7 +5,7 @@
 }
 .promo_video_blur {
   position: absolute;
-  width: 888px;
+  width: 100%;
   height: 230px;
   background: rgba(44, 183, 116, 0.85);
   filter: blur(300px);
@@ -56,7 +56,6 @@
     justify-content: center;
   }
   .promo_video_heading > h1 {
-    font-size: 21.1418px;
     line-height: 20px;
   }
   .video_player_section {
